<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listPersonsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#080808"
    tools:context=".ListPersonsActivity">

    <LinearLayout
        android:id="@+id/j"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/backBtn"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:src="@drawable/backbtn"
            app:tint="@color/white" />
        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/listPersons"
            />


</LinearLayout>
    <LinearLayout
        android:id="@+id/j5"
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/errorCnn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/error_cnn"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/refreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/refreshBtn"
            android:textColor="@android:color/black"
            android:layout_marginTop="205dp"
            android:textSize="25sp"
            android:visibility="gone" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>