<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/j"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:src="@drawable/backbtn"
            app:tint="@color/white" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/personCard" />
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="5dp">


        <ImageView
            android:id="@+id/imageViewPerson"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/image_placeholder" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="top">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView

                    android:text="@string/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/fullNamePerson"
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:text="@string/houseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/familyPerson"
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:text="@string/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/titlePerson"
                    android:paddingStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
