<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personInfo"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/j"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:src="@drawable/backbtn"
            app:tint="@color/white" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:text="@string/gameCard" />
    </LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/gameName"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameGame"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/gameDescription"

        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionGame"
        android:textColor="@color/white"
    />


</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
<Button
    android:layout_width="200dp"
    android:layout_height="60dp"
    android:text="Начать"
   android:layout_marginStart="100dp"
    android:layout_marginTop="150dp"
    android:visibility="visible"
    android:textAllCaps="false"
    />

        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"


            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вопрос 1"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ответ 1 "
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ответ 2 " />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ответ 3 "
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ответ 4"
            />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
